draftpart3/grammar.txt
<program> ::= { <function-definition> } { <statement> }

<function-definition> ::= "func" <identifier> "(" [ <parameter-list> ] ")" "{"
                          { <statement> } "}"

<parameter-list> ::= <identifier> { "," <identifier> }

<statement> ::= <assignment> ";"
              | <print-statement> ";"
              | <if-statement>
              | <while-statement>
              | <for-statement>
              | <try-statement>
              | <return-statement> ";"
              | <function-call> ";"

<assignment> ::= "let" <identifier> "=" <expression>
               | <identifier> "=" <expression>

<print-statement> ::= "display" "(" <expression> ")"

<return-statement> ::= "return" <expression>

<if-statement> ::= "if" "(" <expression> ")" "{" { <statement> } "}"
                   [ "else" ( <if-statement> | "{" { <statement> } "}" ) ]

<while-statement> ::= "wloop" "(" <expression> ")" "{"
                      { <statement> } "}"

<for-statement> ::= "floop" "(" <identifier> "," <expression> ","
                    <expression> ")" "{" { <statement> } "}"

<try-statement> ::= "try" "{" { <statement> } "}" "catch" "(" <identifier> ")"
                    "{" { <statement> } "}"

<expression>           ::= <comparison>

<comparison>           ::= <additive> { <comp-op> <additive> }

<comp-op>              ::= "==" | "!=" | "<" | ">" | "<=" | ">="

<additive>             ::= <term> { ("+" | "-") <term> }

<term>                 ::= <unary> { ("*" | "/" | "%") <unary> }

<unary>                ::= "-" <unary>
                        | <primary>

<primary>              ::= <number>
                        | <identifier>
                        | <string>
                        | "(" <expression> ")"
                        | <function-call>
                        | "T" | "F"

<function-call> ::= <identifier> "(" [ <argument-list> ] ")"

<argument-list> ::= <expression> { "," <expression> }

<identifier> ::= letter { letter | digit | "_" }

<number> ::= digit { digit } [ "." digit { digit } ]

<string> ::= '"' { <string-character> } '"'
